# Pycrc-test

./: .gitmodules  CMakeLists.txt  README.md  crctest.py  main.c
.github/workflows/: cmake.yml
